--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,7 @@
 body {
     background: #f5f5f5;
     height: 100%;
+    overflow-y: scroll;
 
     .content-wrapper {
         width: 55vw;
@@ -83,9 +84,7 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
-        background: var(--golden-yellow);
-        position: fixed;
-        bottom: 0;
+        background: var(--golden-yellow);      
         height: 50px;
         width: 100%;
         padding: 15px;
